Fix Markdown Preview Bullet Collapse Icon Height

--- a/obsidian.css
+++ b/obsidian.css
@@ -2750,6 +2750,7 @@ input[type='number']:hover {
     color: var(--lines);
 }
 .collapse-icon { margin-top: 0; }
+.markdown-preview-view .collapse-icon { margin-top: -2px; }
 .markdown-preview-view .heading-collapse-indicator { margin-top: calc(var(--f-s-h) * -.3); }
 .publish-section-header-toggle-collapsed-button { margin-top: 2px;}
 
